<resources>

    <string name="app_name">Cluster09</string>

    <!-- Para los menus de opciones -->
    <string name="ayuda">Help</string>
    <string name="nueva_medicina">New medicine</string>
    <string name="editar">Edit</string>
    <string name="borrar">Delete</string>
    <string name="paciente_cuidador">Patient Carer</string>
    <string name="nueva_alarma">New Alarm</string>

    <!-- Para los titulos de actividades -->
    <string name="title_activity_agregar">Añadir</string>
    <string name="title_activity_CrearMedicina">Create Medicine</string>
    <string name="title_activity_CrearAlarmas">Create Alarm</string>
    <string name="title_activity_MostrarAlarma">Alarm data</string>
    <string name="title_activity_CrearPacienteCuidador">Edit Patient and Carer</string>
    <string name="title_activity_MostrarPacienteCuidador">Patient-Carer data</string>
    <string name="title_activity_MostrarMedicina">Medicine data</string>
    <string name="title_activity_MostrarAyuda">Help</string>
    <string name="title_activity_AlarmaDeMedicinas">Take Medicines</string>


    <!-- Para los layouts -->

    <string name="nombre">Name</string>
    <string name="descripcion">Description</string>
    <string name="Dosis">Dose</string>
    <string name="lunes_largo">Monday</string>
    <string name="martes_largo">Tuesday</string>
    <string name="miercoles_largo">Wednesday</string>
    <string name="jueves_largo">Thursday</string>
    <string name="viernes_largo">Friday</string>
    <string name="sabado_largo">Saturday</string>
    <string name="domingo_largo">Sunday</string>
    <string name="lunes_corto">Mo</string>
    <string name="martes_corto">Tu</string>
    <string name="miercoles_corto">We</string>
    <string name="jueves_corto">Th</string>
    <string name="viernes_corto">Fr</string>
    <string name="sabado_corto">Sa</string>
    <string name="domingo_corto">Su</string>
    <string name="miligramos_corto">mg</string>
    <string name="nueva_hora">NEW TIME</string>
    <string name="cantidad_porcion_en_mg">Dosage amount (In mg)</string>
    <string name="nota_alarma">Alarm note</string>
    <string name="guardar">SAVE</string>
    <string name="apellidos">Surnames</string>
    <string name="direccion">Address</string>
    <string name="telefono">Phone number</string>
    <string name="email">Email</string>
    <string name="paciente">PATIENT</string>
    <string name="cuidador">CARER</string>
    <string name="alarmas">ALARMS</string>
    <string name="debes_tomar">You must take</string>
    <string name="medicinas">medicines</string>
    <string name="tomado">I HAVE TAKEN IT</string>
    <string name="mg_por_defecto">100</string>

    <string name="AyudaText">
        Pappstillero\r\n
       User Instructions\r\n\r\n

Create Medicine\r\n\r\n
1º You must create the medicines, go to the top-right menu, and click on "New Medicine".\r\n
2º Fill the gaps, and put a medicine photo.\r\n
3º Save it.\r\n\r\n


Create Alarm\r\n\r\n
1º Click on the medicine you want to add the alarm.\r\n
2º When you are on the medicine screen, click, top-right menu, click on "New Alarm".\r\n
3º Fill the gaps - days, hours, and notes if necessary -.\r\n
4º Save the alarm\r\n\r\n


Delete Medicine\r\n\r\n
1º Select the medicine you want to delete.\r\n
2º Top-right menu, click on "Delete".\r\n\r\n

Add patient and carer data\r\n\r\n
1º Top-right menu, click on Menu superior derecho, pulsar sobre la opción "Patient-Carer data". \r\n
2º Top-right menu,edit.\r\n
3º Fill the gaps, and save it.\r\n\r\n

Edit or modify patient and carer data\r\n\r\n
1º To delete data, click on Delete, on top-right menu.\r\n
2º To modify data, click on Edit, on top-right menu.\r\n\r\n
        </string>
</resources>
