<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="grupoasimov.pastillero.controladores.MostrarMedicina">
    <item android:id="@+id/menu_medicina_ayuda"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/ayuda"
        android:orderInCategory="1"/>
    <item android:id="@+id/menu_medicina_nueva_alarma"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/nueva_alarma"
        android:orderInCategory="2"/>
    <item android:id="@+id/menu_medicina_editar"
        android:title="@string/editar"
        android:orderInCategory="3"/>
    <item android:id="@+id/menu_medicina_borrar"
        android:title="@string/borrar"
        android:orderInCategory="4"/>
</menu>
