<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_crear_paciente_cuidador"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="grupoasimov.pastillero.controladores.CrearPacienteCuidador">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:text="@string/paciente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textSize="24sp"
                android:textStyle="normal|bold"
                android:textAlignment="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/cpc_nombre_paciente"
                android:selectAllOnFocus="true"
                android:hint="@string/nombre" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/cpc_apellidos_paciente"
                android:selectAllOnFocus="true"
                android:hint="@string/apellidos" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/cpc_direccion_paciente"
                android:selectAllOnFocus="true"
                android:hint="@string/direccion" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/cpc_telefono_paciente"
                android:selectAllOnFocus="true"
                android:hint="@string/telefono" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/cpc_email_paciente"
                android:selectAllOnFocus="true"
                android:hint="@string/email" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:text="@string/cuidador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                android:textStyle="normal|bold"
                android:textSize="24sp"
                android:textAlignment="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/cpc_nombre_cuidador"
                android:selectAllOnFocus="true"
                android:hint="@string/nombre" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/cpc_apellidos_cuidador"
                android:selectAllOnFocus="true"
                android:hint="@string/apellidos" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/cpc_direccion_cuidador"
                android:selectAllOnFocus="true"
                android:hint="@string/direccion" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/cpc_telefono_cuidador"
                android:inputType="phone"
                android:selectAllOnFocus="true"
                android:hint="@string/telefono" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/cpc_email_cuidador"
                android:selectAllOnFocus="true"
                android:hint="@string/email" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <Button
                android:text="@string/guardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cpc_guardar" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
